src/objects/Jumio_Credentials__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Active_API_secret__c</fullName>
        <label>Active API secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint__c</fullName>
        <label>EndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_API_token__c</fullName>
        <label>Merchant API token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Jumio Credentials</label>
</CustomObject>